--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
+
                 <div class="destination" id="florida">
                     <h2>Florida</h2>
+
+                    <div class="destination" id="Paris">
+                        <h2>Paris</h2>
+                </div>
+
             </div>
-        </div>
     </div>
 
 </body>
